paxquery-common/src/main/java/fr/inria/oak/paxquery/common/xml/navigation/parser/TreePatternParser.jjt

/*******************************************************************************
 * Copyright (C) 2013, 2014 by Inria and Paris-Sud University
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *   http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 ******************************************************************************/

options {
  MULTI=true;
  VISITOR=true;
  NODE_DEFAULT_VOID=true;
  BUILD_NODE_FILES=true;
  STATIC=false;
}

PARSER_BEGIN(TreePatternParser)
package fr.inria.oak.paxquery.common.xml.navigation.parser;

import java.io.*;
import fr.inria.oak.paxquery.common.xml.navigation.NavigationTreePattern;

public class TreePatternParser {

}
PARSER_END(TreePatternParser)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| <"/*" (~["*"])* "*" (~["/"] (~["*"])* "*")* "/">
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL: ["1"-"9"] (["0"-"9"])* >
}

TOKEN : /* STRING */
{
	< STRING: "\"" (~["\""])* "\"" >
}

TOKEN : /* STRING */
{
    <ATTRDOCID: "docID" >
	| <ATTRID: "ID" >
	| <ATTRVAL: "Val" >
	| <ATTRCONT: "Cont" >
   	| <PREDCODE: "=" | "!=" | ">=" | ">" | "<=" | "<">
}

ASTStart Start(String TreePatternName) #Start : {}
{
  
  TreePatternSpec() <EOF>
  { return jjtThis; }
}

void TreePatternSpec() : {}
{
	( ( IsOrdered() IsRoot() DefaultNamespace() NSpec() ";" ESpec() ) #TreePatternSpec )
}

void IsRoot() : {} 
{
	(("/") #ROOT)?
}

void IsOrdered() : {} 
{
	(("o"|"O") #TreePatternOrdered)?
}

void DefaultNamespace() : {} 
{
	(("[Namespace=" Content()"]") #DefaultNamespace)?
}

void NSpec() : {}
{
	((NE()|NA()))* #NSPEC
}

void NE() : {}
{
	("E:" MyID() (IDSpec())? (TSpec())? (VSpec())? (CSpec())? ) #NE
}

void NA() : {}
{
	("A:" MyID()  (IDSpec())?  (TSpec()) ? (VSpec())? (CSpec())? ) #NA
}

void IDSpec()  : {}
{
	(("ID" (
			"s" #Structural |
			"o" #Ordered |
			"i" #Integer |
			"n" #Navigating |
			"u" #Updating 
			)
	)  (("R") #Required)? ) #IDSpec 
}

void TSpec() : {}
{
	(	
		((("[Tag=" Content()"]") #TagRestriction) (("Tag" (("R") #Required)?) #TagFull)? )| (("Tag") ((("R") #Required)?) #Tag)
	) 
}

void VSpec() : {}
{
	(	
		((("[Val" PredCode()  (Content() | MyID())"]") #ValRestriction) (("Val" (("R") #Required)?) #ValFull)? )| (("Val") ((("R") #Required)?) #Val)
	) 
}

void CSpec() #CSpec : {}
{
	"Cont" 
}

void PredCode() #PredCode :
{
  Token t;
}
{
  t=<PREDCODE>
  {
    jjtThis.setName(t.image);
  }
}

void Content() #Content :
{
  Token t;
}
{
  t=<STRING>
  {
    jjtThis.setName(t.image);
  }
}

void MyID() #MyID :
{
  Token t;
}
{
  t=<INTEGER_LITERAL>
  {
    jjtThis.setName(t.image);
  }
}

void ESpec()   :{}
{
	( (MyID() "," MyID() ( "//" #Descendant |"/" #Child ) ("n" #Nested)? ("o" #Outer |"j" #Join |"s" #Semi )  ) #EdgeSpec ) *
}
